plugins {
    id 'java'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'tools.jackson.core:jackson-databind:3.2.0'

    testImplementation 'org.junit.jupiter:junit-jupiter:6.1.1'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:6.1.1'
}

test {
    useJUnitPlatform()
}
